@@ -2,6 +2,7 @@
 Version: 5.3.1
 Date: ????
   Changes:
+    - Removed the (+/1) buttons, a new row will be added if something is put in the last row
 ---------------------------------------------------------------------------------------------------
 Version: 5.3.0
 Date: 2020-11-23
